src/StdSelect/StdSelect_ViewerSelector3d.hxx
@@ -77,15 +77,7 @@ public:
                                          const Handle(V3d_View)& theView,
                                          const Standard_Boolean theToClearOthers = Standard_True);
 
-  //! Marks all sensitive entities, stored in viewer selector, as inactive for selection
-  Standard_EXPORT void ResetSelectionActivationStatus();
-
   Standard_EXPORT virtual Standard_Boolean HasDepthClipping (const Handle(SelectMgr_EntityOwner)& theOwner) const Standard_OVERRIDE;
-
-  //! Is used for rectangular selection only
-  //! If theIsToAllow is false, only fully included sensitives will be detected, otherwise the algorithm will
-  //! mark both included and overlapped entities as matched
-  Standard_EXPORT void AllowOverlapDetection (const Standard_Boolean theIsToAllow);
 
   DEFINE_STANDARD_RTTI(StdSelect_ViewerSelector3d, SelectMgr_ViewerSelector)
 
